kubernetes/manifests/aks/01-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: rv-kcnaprep-d
spec: 
  replicas: 1 
  strategy: 
    type: RollingUpdate 
  selector: 
    matchLabels: 
      app: rv-kcnaprep-d
  template: 
    metadata: 
      labels: 
        app: rv-kcnaprep-d
    spec: 
      containers: 
      - name: kcnaprep 
        image: sangramrath/kcnaprep:1.0
        ports: 
        - containerPort: 3000
