kubernetes/manifests/aks/06-service-LoadBalancer-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rv-kcnaprep-d
spec:
  selector:
    app: rv-kcnaprep-d
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
